--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <ul>
         <li><a href="https://">Home</a></li>
         <li><a href="https://">About us</a></li>
+        <li><a href="https://">Services</a></li>
+        <li><a href="https://">Products</a></li>
         <li><a href="https://">Contact</a></li>
     </ul>
 </nav>
