--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         <li><a href="https://">Home</a></li>
         <li><a href="https://">About us</a></li>
         <li><a href="https://">Contact</a></li>
+        <li><a href="https://">Service</a></li>
+        <li><a href="https://">Products</a></li>
     </ul>
+    <main>
+        <article>Article</article>
+    </main
 </nav>
 </body>
 </html>
