--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <li><a href="https://">Products</a></li>
         <li><a href="https://">Contact</a></li>
     </ul>
+    <main>
+        <article>
+            Article
+        </article>
+    </main>
 </nav>
 </body>
 </html>
