--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
         <li><a href="https://">Home</a></li>
         <li><a href="https://">About us</a></li>
         <li><a href="https://">Services</a></li>
-        <li><a href="https://">Products</a></li>
-        <li><a href="https://">Contact</a></li>
         <li><a href="https://">Service</a></li>
         <li><a href="https://">Products</a></li>
+        <li><a href="https://">Contact</a></li>
     </ul>
+    <ul>        
+        <li><a href="https://">Service</a></li>
+        <li><a href="https://">Products</a></li>
+        <li><a href="https://">Contact</a></li></ul>
     <main>
-
         <article>Article</article>
-    </main
+    </main>
+    <aside>aside</aside>
 
 </nav>
 </body>
