--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
         <li><a href="https://">Products</a></li>
     </ul>
     <main>
-
         <article>Article</article>
     </main>
     <main>
 
         <aside>Aside</aside>
-    </main
+    </main>
 
 </nav>
 </body>
