<ul> changed to <ol>

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <li><a href="https://">Products</a></li>
         <li><a href="https://">Contact</a></li>
     </ul>
-    <ul>        
+    <0l>
         <li><a href="https://">Service</a></li>
         <li><a href="https://">Products</a></li>
-        <li><a href="https://">Contact</a></li></ul>
+        <li><a href="https://">Contact</a></li>
+</0l>
     <main>
         <article>Article</article>
     </main>
